--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
     - python3 setup.py install
-    - pip install python-coveralls pytest-cov
+    - pip install pytest pytest-cov coveralls
 
 script:
     - py.test tests -v --cov aiohttp_traversal --cov-report term-missing
